# xtensor-rust

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE
bridge/: BUILD.bazel  bridge.hpp  bridge.tpl.hpp  bridge_test.cpp
cpp/: BUILD.bazel  main.cpp  xtensor_rust.cpp  xtensor_rust.hpp
cpp/bridge/: BUILD.bazel  bridge.hpp  bridge_test.cpp
rust/: BUILD.bazel  Cargo.toml
rust/cargo/: BUILD.bazel
rust/src/: lib.rs
src/: lib.rs  primitives.rs
