load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "generated",
    srcs = [
        "generated/xtensor_rust.rs.cpp",
        "//:target/debug/libxtensor_rust.so",
    ],
    hdrs = [
        "generated/xtensor_rust.rs.hpp",
    ],
    deps = ["@cxx//:core-lib"],
)

cc_library(
    name = "bridge",
    hdrs = [
        "bridge.hpp",
        "bridge.tpl.hpp",
    ],
    copts = ["--std=c++17"],
    visibility = ["//visibility:public"],
    deps = [":generated"],
)

cc_test(
    name = "bridge_test",
    srcs = ["bridge_test.cpp"],
    copts = ["--std=c++17"],
    deps = [
        ":bridge",
        "@catch2",
    ],
)
